--- a/index.html
+++ b/index.html
@@ -10,31 +10,75 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <style>
+        .bg-color {
+            background-color: #131417;
+        }
+    </style>
 
 </head>
 
 
 
-<body>
+<body class="bg-color">
 
-    <h1 class="text-center font-bold text-2xl my-10">
+    <h1 class="text-center text-white font-bold text-2xl my-10">
         XOR logic in js
     </h1>
-    <div class="w-60 m-auto border border-red-100 p-10 bg-blue-100 rounded-md">
-        <h1 class="text-md font-bold py-4">
-            Result : <span id="result">
+    <h1 class="text-center text-white font-normal text-md my-10">
+        The truth table for the XOR (exclusive OR) operation is as follows:
+    </h1>
+    <div class="flex flex-col-reverse md:flex-row gap-10 m-auto items-center justify-center ">
+       
+        <table class="table-auto  border-collapse border border-gray-300 ">
+            <thead>
+                <tr class="bg-gray-50">
+                    <th class="border border-gray-300 px-4 py-2">A</th>
+                    <th class="border border-gray-300 px-4 py-2">B</th>
+                    <th class="border border-gray-300 px-4 py-2">A XOR B</th>
+                </tr>
+            </thead>
+            <tbody class="text-white">
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2 text-center">0</td>
+                    <td class="border border-gray-300 px-4 py-2 text-center">0</td>
+                    <td class="border border-gray-300 px-4 py-2 text-center">0</td>
+                </tr>
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2 text-center">0</td>
+                    <td class="border border-gray-300 px-4 py-2 text-center">1</td>
+                    <td class="border border-gray-300 px-4 py-2 text-center">1</td>
+                </tr>
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2 text-center">1</td>
+                    <td class="border border-gray-300 px-4 py-2 text-center">0</td>
+                    <td class="border border-gray-300 px-4 py-2 text-center">1</td>
+                </tr>
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2 text-center">1</td>
+                    <td class="border border-gray-300 px-4 py-2 text-center">1</td>
+                    <td class="border border-gray-300 px-4 py-2 text-center">0</td>
+                </tr>
+            </tbody>
+        </table>
 
-            </span>
-        </h1>
-        <div>
-            <input class="w-full my-2 px-2 y-3 rounded-sm outline-none" id="num1" type="number"
-                placeholder="Enter 1 or 0">
-            <input class="w-full my-2 px-2 y-3 rounded-sm outline-none" id="num2" type="number"
-                placeholder="Enter 1 or 0">
-            <button class="btn px-2 py-1 bg-red-400 rounded-sm w-full" id="btn">Done</button>
+
+        <div class=" border border-red-100 p-5 bg-blue-100 w-56 rounded-sm">
+
+            <h1 class="text-md font-bold py-4">
+                Result : <span id="result">
+
+                </span>
+            </h1>
+            <div>
+                <input class="w-full my-2 px-2 y-3 rounded-sm outline-none" id="num1" type="number"
+                    placeholder="Enter 1 or 0">
+                <input class="w-full my-2 px-2 y-3 rounded-sm outline-none" id="num2" type="number"
+                    placeholder="Enter 1 or 0">
+                <button class="btn px-2 py-1 bg-red-400 rounded-sm w-full" id="btn">Done</button>
+            </div>
+
         </div>
-
     </div>
 
 
@@ -52,26 +96,26 @@
         let myBtn = myId('btn');
         myBtn.addEventListener('click', function (event) {
 
-                event.preventDefault();
+            event.preventDefault();
 
-                const neuralNetwork = new brain.NeuralNetwork();
+            const neuralNetwork = new brain.NeuralNetwork();
 
-                neuralNetwork.train([
-                    { input: [0, 0], output: [0] },
-                    { input: [1, 0], output: [1] },
-                    { input: [0, 1], output: [1] },
-                    { input: [1, 1], output: [0] },
-                ]);
+            neuralNetwork.train([
+                { input: [0, 0], output: [0] },
+                { input: [1, 0], output: [1] },
+                { input: [0, 1], output: [1] },
+                { input: [1, 1], output: [0] },
+            ]);
 
-                const output = Math.round(neuralNetwork.run([parseInt(fastNum.value), parseInt(secondNum.value)]));
+            const output = Math.round(neuralNetwork.run([parseInt(fastNum.value), parseInt(secondNum.value)]));
 
-                console.log(`output - ${output}`)
-                myId('result').innerText = output
+            console.log(`output - ${output}`)
+            myId('result').innerText = output
 
-                fastNum.value = '';
-                secondNum.value = '';
+            fastNum.value = '';
+            secondNum.value = '';
 
-            
+
         })
 
     </script>
